# fast_api_examples

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: app.py
examples/file_upload/: routes.py  schemas.py
examples/websocket/: routes.py
examples/websocket/templates/: index.html
files/: valid_vehicles.csv
